// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(124, 58, 237, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(124, 58, 237, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(124, 58, 237, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) neutral-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(124, 58, 237, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EDE9FE",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#3B0764",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EDE9FE",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#3B0764",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EDE9FE",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#3B0764",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) primary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EDE9FE",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#3B0764",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#1E3A8A",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#1E3A8A",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#1E3A8A",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) secondary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#1E3A8A",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EEF2FF",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#312E81",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EEF2FF",
          "borderRadius": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#312E81",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EEF2FF",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#312E81",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix baseline (variant x size x {default,disabled} x modes) tertiary-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "#EEF2FF",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#312E81",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;

exports[`CategoryBadge — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) neutral-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Chat"
    accessibilityRole="text"
    style={
      [
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(124, 58, 237, 0.02)",
          "borderRadius": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-category-badge"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Chat
    </Text>
  </View>
</View>
`;
